# unfold

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  debug_test.cpp  unfold.code-workspace
.devcontainer/: devcontainer.json  unfold.code-workspace
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: UnfoldConfig.cmake.in  config.h.in
cmake/modules/: code-coverage.cmake
cmake/toolchains/: mingw64-clang.cmake  mingw64-gcc.cmake  msys2.cmake
examples/: CMakeLists.txt
examples/gtk/: CMakeLists.txt  Edge.cc  Edge.hh  UpdateDialog.cc  UpdateDialog.hh  callback.hh  main.cc  nls.h  resources.gresource.xml
examples/qt/: CMakeLists.txt  UpdateDialog.cc  UpdateDialog.hh  main.cc
include/unfold/: SignatureAlgorithmType.hh  Unfold.hh  UnfoldErrors.hh  UnfoldHooks.hh
libs/: CMakeLists.txt
libs/coro/: CMakeLists.txt  NOTES
libs/coro/include/coro/: asio.hh  coro.hh  gtask.hh  promise.hh  scheduler.hh  task.hh
libs/coro/include/unfold/coro/: IOContext.hh  asio.hh  async.hh  coro.hh  gtask.hh  promise.hh  qttask.hh  scheduler.hh  task.hh
libs/coro/src/: IOContext.cc
libs/coro/test/: CMakeLists.txt  CoroTest.cc  UnfoldTestCoro.cc
libs/crypto/: CMakeLists.txt
libs/crypto/include/crypto/: CertificateExtractor.hh  SignatureAlgorithmType.hh  SignatureVerifier.hh  SignatureVerifierErrors.hh  XMLDSigVerifier.hh
libs/crypto/src/: CertificateExtractor.cc  ECDSASignatureAlgorithm.cc  ECDSASignatureAlgorithm.hh  PublicKey.cc  PublicKey.hh  SignatureAlgorithm.cc  SignatureAlgorithm.hh  SignatureVerifier.cc  SignatureVerifierErrors.cc  XMLDSigVerifier.cc
libs/crypto/test/: CMakeLists.txt  UnfoldTestCrypto.cc
libs/crypto/test/data/: ed25519pub.pem  junk  junk.ed25519  morejunk
libs/http/: CMakeLists.txt
libs/http/include/http/: HttpClient.hh  HttpClientErrors.hh  HttpServer.hh  HttpStream.hh  Options.hh
libs/http/src/: Connection.cc  Connection.hh  HttpClient.cc  HttpClientErrors.cc  HttpServer.cc  HttpStream.cc  HttpStream.hh  Options.cc  SystemProxy.hh
libs/http/src/windows/: WindowsSystemProxy.cc  WindowsSystemProxy.hh
libs/http/test/: BugTest.cc  CMakeLists.txt  HttpServer.cc  HttpServer.hh  ProxyTest.cc  TestServer.cc  UnfoldTestHttp.cc
libs/sigstore/: CMakeLists.txt
libs/sigstore/include/sigstore/: SigstoreErrors.hh  SigstoreVerifier.hh
libs/sigstore/src/: BundleHelper.cc  BundleHelper.hh  BundleLoader.cc  BundleLoader.hh  CanonicalBodyParser.cc  CanonicalBodyParser.hh  Certificate.cc  Certificate.hh  CertificateStore.cc  CertificateStore.hh  CheckpointParser.cc  CheckpointParser.hh  CryptographicAlgorithms.cc  CryptographicAlgorithms.hh  JsonUtils.cc  JsonUtils.hh  MerkleTreeValidator.cc  MerkleTreeValidator.hh  PublicKey.cc  PublicKey.hh  RFC6962Hasher.cc  RFC6962Hasher.hh  SignatureVerifier.cc  SignatureVerifier.hh  SigstoreBundleBase.cc  SigstoreBundleBase.hh  SigstoreErrors.cc  SigstoreLegacyBundle.cc  SigstoreLegacyBundle.hh  SigstoreStandardBundle.cc  SigstoreStandardBundle.hh  SigstoreVerifier.cc  TransparencyLogEntry.cc  TransparencyLogEntry.hh  TransparencyLogLoader.cc  TransparencyLogLoader.hh  TransparencyLogVerifier.cc  TransparencyLogVerifier.hh  trustBundle.json
libs/sigstore/test/: BundleLoaderTest.cc  CMakeLists.txt  CertificateStoreTest.cc  CertificateTest.cc  CheckpointParserTest.cc  HttpClientMock.hh  PublicKeyTest.cc  RFC6962HasherTest.cc  SignatureVerifierTest.cc  SigstoreBundleTest.cc  SigstoreTest.cc  TransparencyLogEntryTest.cc  TransparencyLogLoaderTest.cc  TransparencyLogVerifierTest.cc
libs/sigstore/test/data/: appcast-sigstore.xml.sigstore.bundle  appcast-sigstore.xml.sigstore.json  appcast-sigstore.xml.sigstore.new.bundle  appcast-sigstore.xml.sigstore.new.json  body.json  tlog.json
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: Base64.hh  DateUtils.hh  Enum.hh  EnumIterator.hh  IOContext.hh  Logging.hh  OneShotTimer.hh  PeriodicTimer.hh  StringUtils.hh  TempDirectory.hh  TestUtils.hh  TimeSource.hh
libs/utils/src/: Base64.cc  DateUtils.cc  IOContext.cc  Logging.cc  OneShotTimer.cc  PeriodicTimer.cc  StringUtils.cc  TempDirectory.cc
libs/utils/test/: CMakeLists.txt  EnumTest.cc  UnfoldTestUtils.cc
src/: AppCast.cc  AppCast.hh  Base64.cc  Base64.hh  CMakeLists.txt  Checker.cc  Checker.hh  DummyPlatform.cc  DummyPlatform.hh  DummySettingsStorage.cc  DummySettingsStorage.hh  ECDSASignatureAlgorithm.cc  ECDSASignatureAlgorithm.hh  HTTPClient.cc  HTTPClient.hh  Hooks.cc  Hooks.hh  Installer.cc  Installer.hh  Logging.cc  Logging.hh  Platform.hh  PublicKey.cc  Settings.cc  Settings.hh  SettingsStorage.hh  SignatureVerifier.cc  SignatureVerifier.hh  SignatureVerifierErrors.cc  SignatureVerifierErrors.hh  SigstoreVerifier.cc  SigstoreVerifier.hh  UnfoldErrors.cc  UnfoldInternalErrors.cc  UnfoldInternalErrors.hh  UpgradeChecker.cc  UpgradeChecker.hh  UpgradeControl.cc  UpgradeControl.hh  UpgradeInstaller.cc  (+1 more)
src/windows/: WindowsPlatform.cc  WindowsPlatform.hh  WindowsSettingsStorage.cc  WindowsSettingsStorage.hh
test/: AppCastTests.cc  CMakeLists.txt  CheckerMock.hh  CheckerTests.cc  Fixture.hpp  HTTPServer.cc  HTTPServer.hh  InstallerMock.hh  InstallerTests.cc  IntegrationTests.cc  SettingsStorageMock.hh  SettingsTests.cc  SignatureVerifierMock.hh  SigstoreVerifierMock.hh  TestBase.hh  TestInstaller.cc  TestPlatform.cc  TestPlatform.hh  TimeSourceMock.hh  UnfoldTest.cc  UpgradeControlTests.cc  WindowsTests.cc  manifest.xml  sig
test/data/: appcast-canary-error.xml  appcast-canary-sparkle.xml  appcast-canary.xml  appcast-channels.xml  appcast-signed-in.xml  appcast-signed.xml  appcast-sigstore.xml  appcast-sigstore.xml.sigstore  appcast-tmpl.xml  appcast.xml  ec_private.pem  ec_public.pem  ed25519key.pem  invalidappcast.xml  junk.sigstore  okappcast.xml  test-signed-installer.exe.ed25519  test-signed-installer.exe.sigstore  testappcast.xml
